--- a/views/admin/categoryManage.ejs
+++ b/views/admin/categoryManage.ejs
@@ -21,7 +21,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 <!-- Bootstrap JavaScript Bundle (Bootstrap JS และ Popper.js) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-yGbBH6fqLV65chcbDcB4+i8Zzy4m1qSor/Yfmc4xGTtkZ6DtXJCd6VsjzP5NPbXt" crossorigin="anonymous"></script>
 
   </head>
 
@@ -205,8 +204,9 @@
       <img src="/img/nin_g4.jpg" class="col mb-4" />
     </div> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
       <script>
 
         // for edit category
@@ -371,4 +371,5 @@ function deleteCategory(id) {
     </script>
   </body>
 </html>
+
 
