--- a/views/admin/productCategory.ejs
+++ b/views/admin/productCategory.ejs
@@ -71,11 +71,11 @@
         <div class="container-fluid row">
         <div class="row row-cols-lg-3 row-cols-md-4 row-cols-sm-6">
           <% products.forEach(product => { %>
-          <div class="col mb-5 position-relative">
-            <img src="<%= product.product_images %>" alt="<%= product.product_name %>" />
+            <div class="col mb-5 position-relative" id="product_<%= product.id %>">
+              <img src="<%= product.product_images %>" alt="<%= product.product_name %>" />
             <div class="btn-group position-absolute top-0 start-55 translate-middle pb-4">
               <button class="btn btn-secondary" onclick="openEditModal('<%= product._id %>')">Edit</button>
-              <button class="btn btn-danger">Delete</button>
+              <button class="btn btn-danger" onclick="deleteProduct('<%= product.id %>')">Delete</button> <!-- Add onclick event -->
             </div>
           </div>
           <% }); %>
@@ -276,6 +276,25 @@ function openEditModal(productId) {
       alert('Failed to update product');
     }
   });
+
+  function deleteProduct(productId) {
+        // Confirm with the user before deleting the product
+        if (confirm('Are you sure you want to delete this product?')) {
+            // Send an AJAX request to delete the product
+            $.ajax({
+                url: '/api/products/' + productId,
+                type: 'DELETE',
+                success: function () {
+                    // If deletion is successful, remove the product from the HTML view
+                    $('#product_' + productId).remove();
+                    alert('Product deleted successfully');
+                },
+                error: function () {
+                    alert('Failed to delete product');
+                }
+            });
+        }
+    }
 </script>
 
 
