--- a/views/admin/productCategory.ejs
+++ b/views/admin/productCategory.ejs
@@ -45,7 +45,7 @@
           </a>
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><a class="dropdown-item" href="#">Category Management</a></li>
+            <li><a class="dropdown-item" href="/categoryManage">Category Management</a></li>
             <li>
               <a class="dropdown-item" href="/productCategory"
                 >Product Management</a
@@ -143,11 +143,12 @@
       </div>
       <div class="modal-body">
         <form id="editProductForm">
+          <input type="hidden" id="editProductId" name="editProductId">
           <div class="mb-3">
             <label for="editProductCategory" class="form-label">Product Category</label>
             <select class="form-select" id="editProductCategory" name="editProductCategory">
               <% categories.forEach(category => { %>
-                <option value="<%= category._id %>"><%= category.name %></option>
+                <option value="<%= category.id %>"><%= category.category_name %></option>
               <% }); %>
             </select>              
           </div>
@@ -155,7 +156,26 @@
             <label for="editProductName" class="form-label">Product Name</label>
             <input type="text" class="form-control" id="editProductName" name="editProductName" required>
           </div>
-          <!-- Add other form fields here -->
+          <div class="mb-3">
+            <label for="editProductDescription" class="form-label">Product Description</label>
+            <textarea class="form-control" id="editProductDescription" name="editProductDescription" required></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="editProductImages" class="form-label">Product Images</label>
+            <input type="text" class="form-control" id="editProductImages" name="editProductImages" required>
+          </div>
+          <div class="mb-3">
+            <label for="editProductPrice" class="form-label">Product Price</label>
+            <input type="number" class="form-control" id="editProductPrice" name="editProductPrice" step="0.01" required>
+          </div>
+          <div class="mb-3">
+            <label for="editProductPricePromotion" class="form-label">Product Price Promotion</label>
+            <input type="number" class="form-control" id="editProductPricePromotion" name="editProductPricePromotion" step="0.01" required>
+          </div>
+          <div class="mb-3">
+            <label for="editProductSalesCount" class="form-label">Product Sales Count</label>
+            <input type="number" class="form-control" id="editProductSalesCount" name="editProductSalesCount" required>
+          </div>
           <button type="submit" class="btn btn-primary">Save Changes</button>
         </form>
       </div>
@@ -166,136 +186,140 @@
 
 
 <script>
-document.addEventListener("DOMContentLoaded", function () {
-  document.getElementById('addProductForm').addEventListener('submit', async function (event) {
-    event.preventDefault();
-    const productName = document.getElementById('productName').value;
-    const productDescription = document.getElementById('productDescription').value;
-    const productImages = document.getElementById('productImages').value;
-    const productPrice = document.getElementById('productPrice').value;
-    const productPricePromotion = document.getElementById('productPricePromotion').value;
-    const productSalesCount = document.getElementById('productSalesCount').value;
-    const productCategory = document.getElementById('productCategory').value; // เพิ่มการดึงค่า productCategory จากฟอร์ม
-
-    try {
-      const response = await fetch('/api/addProduct', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          productName,
-          productDescription,
-          productImages,
-          productPrice,
-          productPricePromotion,
-          productSalesCount,
-          productCategory // เพิ่ม productCategory ในการส่งข้อมูล
-        })
-      });
-
-      if (!response.ok) {
-        throw new Error('Failed to add product');
-      }
-
-      alert('Product added successfully');
-      $('#addProductModal').modal('hide');
-      window.location.reload();
-    } catch (error) {
-      console.error('Error adding product:', error);
-      alert('Failed to add product');
-    }
-  });
-});
-function openEditModal(productId) {
-  console.log(productId)
-    fetch(`/api/products/${productId}`)
-      .then(response => {
+  document.addEventListener("DOMContentLoaded", function () {
+    document.getElementById('addProductForm').addEventListener('submit', async function (event) {
+      event.preventDefault();
+      const productName = document.getElementById('productName').value;
+      const productDescription = document.getElementById('productDescription').value;
+      const productImages = document.getElementById('productImages').value;
+      const productPrice = document.getElementById('productPrice').value;
+      const productPricePromotion = document.getElementById('productPricePromotion').value;
+      const productSalesCount = document.getElementById('productSalesCount').value;
+      const productCategory = document.getElementById('productCategory').value; 
+  
+      try {
+        const response = await fetch('/api/addProduct', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            productName,
+            productDescription,
+            productImages,
+            productPrice,
+            productPricePromotion,
+            productSalesCount,
+            productCategory
+          })
+        });
+  
         if (!response.ok) {
-          throw new Error('Failed to fetch product data');
+          throw new Error('Failed to add product');
         }
-        return response.json();
-      })
-      .then(productData => {
-        // Fill the form fields with product data
-        document.getElementById('editProductName').value = productData.productName;
-        document.getElementById('editProductDescription').value = productData.productDescription;
-        document.getElementById('editProductImages').value = productData.productImages;
-        document.getElementById('editProductPrice').value = productData.productPrice;
-        document.getElementById('editProductPricePromotion').value = productData.productPricePromotion;
-        document.getElementById('editProductSalesCount').value = productData.productSalesCount;
-        document.getElementById('editProductId').value = productId; // Set the product ID hidden input value
-        $('#editProductModal').modal('show'); // Show the edit product modal
-      })
-      .catch(error => {
-        console.error('Error fetching product data:', error);
-        alert('Failed to fetch product data');
-      });
-  }
-
-  // Add event listener for edit product form submission
-  document.getElementById('editProductForm').addEventListener('submit', async function (event) {
-    event.preventDefault();
-
-    // Get form data
-    const productId = document.getElementById('editProductId').value;
-    const productName = document.getElementById('editProductName').value;
-    const productDescription = document.getElementById('editProductDescription').value;
-    const productImages = document.getElementById('editProductImages').value;
-    const productPrice = document.getElementById('editProductPrice').value;
-    const productPricePromotion = document.getElementById('editProductPricePromotion').value;
-    const productSalesCount = document.getElementById('editProductSalesCount').value;
-
-    try {
-      // Send edit product request to the server
-      const response = await fetch(`/api/products/${productId}`, {
-        method: 'PUT',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          productName,
-          productDescription,
-          productImages,
-          productPrice,
-          productPricePromotion,
-          productSalesCount
-        })
-      });
-
-      if (!response.ok) {
-        throw new Error('Failed to update product');
+  
+        alert('Product added successfully');
+        $('#addProductModal').modal('hide');
+        window.location.reload();
+      } catch (error) {
+        console.error('Error adding product:', error);
+        alert('Failed to add product');
       }
-
-      // If success, close the modal and reload the page
-      alert('Product updated successfully');
-      $('#editProductModal').modal('hide');
-      window.location.reload();
-    } catch (error) {
-      console.error('Error updating product:', error);
-      alert('Failed to update product');
-    }
+    });
   });
-
-  function deleteProduct(productId) {
-        // Confirm with the user before deleting the product
-        if (confirm('Are you sure you want to delete this product?')) {
-            // Send an AJAX request to delete the product
-            $.ajax({
-                url: '/api/products/' + productId,
-                type: 'DELETE',
-                success: function () {
-                    // If deletion is successful, remove the product from the HTML view
-                    $('#product_' + productId).remove();
-                    alert('Product deleted successfully');
-                },
-                error: function () {
-                    alert('Failed to delete product');
-                }
-            });
-        }
-    }
-</script>
+  
+  
+  function openEditModal(productId) {
+          fetch(`/api/products/${productId}`)
+              .then(response => {
+                  if (!response.ok) {
+                      throw new Error('Failed to fetch product data');
+                  }
+                  return response.json();
+              })
+              .then(productData => {
+      // Fill the form fields with product data
+      document.getElementById('editProductName').value = productData.product_name;
+      document.getElementById('editProductDescription').value = productData.product_description;
+      document.getElementById('editProductImages').value = productData.product_images;
+      document.getElementById('editProductPrice').value = productData.product_price;
+      document.getElementById('editProductPricePromotion').value = productData.product_price_promotion;
+      document.getElementById('editProductSalesCount').value = productData.product_sales_count;
+      document.getElementById('editProductId').value = productId; 
+      document.getElementById('editProductCategory').value = productData.category_id; 
+      console.log(productData.category_id)
+      $('#editProductModal').modal('show'); 
+  })
+              .catch(error => {
+                  console.error('Error fetching product data:', error);
+                  alert('Failed to fetch product data');
+              });
+      }
+      
+      // Add event listener for edit product form submission
+      document.getElementById('editProductForm').addEventListener('submit', async function (event) {
+          event.preventDefault();
+          // Get form data
+          const productId = document.getElementById('editProductId').value;
+          const productName = document.getElementById('editProductName').value;
+          const productDescription = document.getElementById('editProductDescription').value;
+          const productImages = document.getElementById('editProductImages').value;
+          const productPrice = document.getElementById('editProductPrice').value;
+          const productPricePromotion = document.getElementById('editProductPricePromotion').value;
+          const productSalesCount = document.getElementById('editProductSalesCount').value;
+          const productCategory = document.getElementById('editProductCategory').value; 
+  
+          try {
+              // Send edit product request to the server
+              const response = await fetch(`/api/products/${productId}`, {
+                  method: 'PUT',
+                  headers: {
+                      'Content-Type': 'application/json'
+                  },
+                  body: JSON.stringify({
+                      productName,
+                      productDescription,
+                      productImages,
+                      productPrice,
+                      productPricePromotion,
+                      productSalesCount,
+                      productCategory
+                  })
+              });
+  
+              if (!response.ok) {
+                  throw new Error('Failed to update product');
+              }
+              // If success, close the modal and reload the page
+              alert('Product updated successfully');
+              $('#editProductModal').modal('hide');
+              window.location.reload();
+          } catch (error) {
+              console.error('Error updating product:', error);
+              alert('Failed to update product');
+          }
+      });
+  
+    function deleteProduct(productId) {
+          // Confirm with the user before deleting the product
+          if (confirm('Are you sure you want to delete this product?')) {
+              // Send an AJAX request to delete the product
+              $.ajax({
+                  url: '/api/products/' + productId,
+                  type: 'DELETE',
+                  success: function () {
+                      // If deletion is successful, remove the product from the HTML view
+                      $('#product_' + productId).remove();
+                      alert('Product deleted successfully');
+                  },
+                  error: function () {
+                      alert('Failed to delete product');
+                  }
+              });
+          }
+      }
+  </script>
+  
 
 
 </body>
