--- a/views/admin/categoryManage.ejs
+++ b/views/admin/categoryManage.ejs
@@ -5,7 +5,194 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Category Management</title>
-    <link rel="stylesheet" href="/css/style_backoffice.css">
+    <style>
+      @import url("http://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body{
+  min-height: 100vh;
+  background: rgb(3,2,18);
+  background: linear-gradient(180deg, rgba(3,2,18,1) 0%, rgba(6,43,157,1) 100%);
+  background-size: cover;
+  background-position: center;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 100px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+}
+
+
+
+.logo {
+  font-size: 32px;
+  color: black;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.navbar a {
+  position: relative;
+  font-size: 18px;
+  color: black;
+  font-weight: 500;
+  text-decoration: none;
+  margin-left: 40px;
+}
+
+.navbar a::before {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: #fff;
+  transition: .3s;
+}
+
+.navbar a:hover:before {
+  width: 100%;
+}
+
+.qty_label {
+  position: absolute;
+  top: -2px;
+  right: 80px;
+  color: red;
+  padding: 02px 7px;
+  display: none;
+}
+
+/* info */
+
+.headline {
+  color: white;
+  margin-top: 140px;
+  margin-left: 120px;
+  font-size: 30px;
+}
+
+.headline-product {
+  position: relative;
+  margin-top: 20%; /* ปรับตำแหน่งลงมาตามที่ต้องการ */
+}
+
+.headline-container {
+  display: flex;
+  align-items: center;
+}
+
+.headline-container button {
+  margin-top: 130px;
+  margin-left: 20px;
+  font-size: 30px;
+  padding: 5px 15px;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.headline-container button:hover {
+  background-color: #0056b3;
+}
+
+.headline-product{
+  color: white;
+  margin-top: 30px;
+  margin-left: 120px;
+  margin-bottom: 30px;
+  font-size: 24px;
+
+}
+.row {
+  position: relative;
+}
+
+.btn-group {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.edit-button,
+.delete-button {
+  display: none;
+}
+
+.col:hover .edit-button,
+.col:hover .delete-button {
+  display: inline-block;
+}
+
+
+.btn {
+  margin: 5px;
+}
+
+.btn{
+  margin-top: 25px;
+  font-size: 20px;
+}
+
+.text-product{
+  color: white;
+  margin-top: 15px;
+  margin-left: 120px;
+  margin-bottom: 90px;
+  font-size: 24px;
+}
+
+.product-container {
+  display: flex;
+  align-items: center;
+  color: #000;
+}
+
+.product-container button{
+  margin-top: 5px;
+  margin-left: 20px;
+}
+
+.add-button{
+  display: flex;
+  align-items: center;
+  margin-top: 100px;
+  margin-left: 20px;
+  font-size: 30px;
+  padding: 5px 15px;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+
+img.item{
+  width: 300px;
+  height:300px
+}
+
+
+    </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -64,6 +251,8 @@
       <h1 class="headline fw-bold">Category Management</h1>
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addCategoryModal">+</button>
   </div>
+
+
 
 
   <!-- Bootstrap Modal for Adding Category -->
@@ -136,7 +325,22 @@
           </div>
         </div>
       </div>
-  
+  <div class="text-white">
+      <% categories.forEach(category => { %>
+        <h2><%= category.category_name %></h2>
+        <ul >
+            <% products.filter(product => product.category_id === category.id).forEach(product => { %>
+                <li>
+                    <h3><%= product.product_name %></h3>
+                    <img class="item" src="<%= product.product_images %>" alt="<%= product.product_name %>" />
+                    <p>Description: <%= product.product_description %></p>
+                    <p>Price: $<%= product.product_price %></p>
+                </li>
+            <% }); %>
+        </ul>
+    <% }); %>
+  </div>
+
     <!-- Console Categories 
     <div class="product-container">
       <h2 class="headline-product fw-bolder">Console</h2>
